agregue h2 con agradecimiento

--- a/Desafios/Desafío 14/index.html
+++ b/Desafios/Desafío 14/index.html
@@ -164,12 +164,9 @@
       </ul>
     </nav>
 
-sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG
-    <div>
-      <dfn>
-        
-      </dfn>
-    </div>
+<h2>Gracias Por visitarnos, VUelva pronto</h2>
+
+
   </footer>
 
 
