--- a/Desafios/Desafío 14/index.html
+++ b/Desafios/Desafío 14/index.html
@@ -55,6 +55,8 @@
   <br>
 
   <main class="container">
+   
+                         <h2>Le damos personalidad a tus pies</h2>
 
     <div>
       <h2 class="main__h2--center">SERVICIOS</h2>
@@ -164,6 +166,7 @@
       </ul>
     </nav>
 
+<h2>Esperamos que disfrutes de tu producto</h2>
 <h2>Gracias Por visitarnos, VUelva pronto</h2>
 
 <h4>Firma: Facundo y Matias</h4>
